[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/OozeBoss.gd" type="Script" id=1]
[ext_resource path="res://scenes/state_machine/SpecificWeaponTypeDamageState.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/state_machine/FollowTargetPhysicsState.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/ooze1.png" type="Texture" id=4]
[ext_resource path="res://scenes/state_machine/StateMachine.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 15.1633

[sub_resource type="CircleShape2D" id=2]
radius = 16.3084

[sub_resource type="Animation" id=3]
resource_name = "Grossify"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=4]
resource_name = "MoveLeft"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=5]
resource_name = "MoveRight"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "TakeDamage"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.00392157, 0.133333, 0.956863, 1 ), Color( 1, 1, 1, 1 ), Color( 0.00392157, 0.133333, 0.956863, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Grossify"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "MoveRight"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "MoveLeft"

[sub_resource type="AnimationNodeBlendSpace1D" id=10]
blend_point_0/node = SubResource( 8 )
blend_point_0/pos = 1.0
blend_point_1/node = SubResource( 9 )
blend_point_1/pos = -1.0

[sub_resource type="AnimationNodeStateMachineTransition" id=11]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=12]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=13]
states/Grossify/node = SubResource( 7 )
states/Grossify/position = Vector2( 427, 64 )
states/Moving/node = SubResource( 10 )
states/Moving/position = Vector2( 206, 63.5 )
transitions = [ "Moving", "Grossify", SubResource( 11 ), "Grossify", "Moving", SubResource( 12 ) ]
start_node = "Moving"

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[node name="OozeBoss" type="Area2D" groups=[
"Enemy",
]]
collision_layer = 16
collision_mask = 12
script = ExtResource( 1 )
HP = 200

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -19.4754, -38.1196 )
texture = ExtResource( 4 )
centered = false
hframes = 6
vframes = 3
frame = 1

[node name="WeaponArea" type="Area2D" parent="Sprite"]
position = Vector2( 19.6233, 24.6024 )
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/WeaponArea"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.831276, -13.8941 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Grossify = SubResource( 3 )
anims/MoveLeft = SubResource( 4 )
anims/MoveRight = SubResource( 5 )

[node name="DamageAnimationPlayer" type="AnimationPlayer" parent="."]
anims/TakeDamage = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 14 )
parameters/Moving/blend_position = 0

[node name="StateMachine" parent="." instance=ExtResource( 5 )]

[node name="PhysicsStates" type="Node" parent="StateMachine"]

[node name="FollowTargetPhysicsState" parent="StateMachine/PhysicsStates" instance=ExtResource( 3 )]
TimeBetweenNewPositions = 3.0
MovementSpeed = 30.0

[node name="DamageStates" type="Node" parent="StateMachine"]

[node name="SpecificWeaponTypeDamageState" parent="StateMachine/DamageStates" instance=ExtResource( 2 )]
WeaponType = "Blade"

[connection signal="area_entered" from="." to="." method="_on_OozeBoss_area_entered"]
